@@ -1480,6 +1480,7 @@ Lukas Vacek
 Ville Vainio
 Andi Vajda
 Case Van Horsen
+John Mark Vandenberg
 Kyle VanderBeek
 Andrew Vant
 Atul Varma
